--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 						<h5>RESEARCH INTEREST</h5>
 						<p>
-							I am a assistant professor in the <a href="https://cse.kangwon.ac.kr/"
+							I am a associate professor in the <a href="https://cse.kangwon.ac.kr/"
 								target="_blank">Department of Computer Science and Engineering</a> at <a
 								href="https://www.kangwon.ac.kr/english/index.do" target="_blank">Kangwon national
 								university</a>, South Korea.
@@ -89,7 +89,7 @@
 
 						<blockquote class="blockquote text-right">
 							<p class="mb-0"></p>
-							<footer class="blockquote-footer">updated 12 May, 2022</footer>
+							<footer class="blockquote-footer">updated 8 Sep, 2025</footer>
 						</blockquote>
 					</div>
 				</div>
