Add Lab Homepage link to homepage

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 								href="https://docs.google.com/document/d/1pwR4VtFH5ifV_W_lMsAisfupnHwliurHJaziSi5mrFY/edit?usp=sharing"
 								target="_blank"></i>CV</a> |
 							<a class="ui label" href="https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en"
-								target="_blank">Google Scholar</a>
+								target="_blank">Google Scholar</a> |
+							<a class="ui label" href="https://hai.kangwon.ac.kr/"
+								target="_blank">Lab Homepage</a>
 						</div>
 
 						<blockquote class="blockquote text-right">
