change profile images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>AUK KIM | Personal website</title>
 	<meta charset="utf-8">
 	<meta content="Auk Kim | Personal Website" name="title">
-	<meta content="KNU,kangwon,research,phd,hci,kim auk,auk kim" name="keywords">
+	<meta content="KNU,kangwon,research,phd,kim auk,auk kim,hai,hci,human-computer interaction, human-ai-interaction" name="keywords">
 	<meta content="Auk Kim" name="author">
 	<meta content="A personal website for Auk Kim" name="description">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible" />
@@ -37,12 +37,10 @@
 			<div class="navbar-collapse collapse" id="navbarResponsive">
 				<ul class="nav navbar-nav ml-auto">
 					<li class="nav-item"><a class="nav-link active" href="#home" target-menu="menu_home">HOME</a></li>
-					<!-- <li class="nav-item"><a class="nav-link" href="#aboutme"
-						target-menu="menu_aboutme">ABOUT ME</a></li>-->
+					<!-- <li class="nav-item"><a class="nav-link" href="#aboutme" target-menu="menu_aboutme">ABOUT ME</a></li>-->
 					<li class="nav-item"><a class="nav-link" href="#publication"
 							target-menu="menu_publication">PUBLICATION</a></li>
-					<!-- <li class="nav-item"><a class="nav-link" href="#cv"
-						target-menu="menu_cv">CURRICULUM VITAE</a></li> -->
+					<!-- <li class="nav-item"><a class="nav-link" href="#cv" target-menu="menu_cv">CURRICULUM VITAE</a></li> -->
 				</ul>
 			</div>
 		</div>
@@ -57,7 +55,7 @@
 			<div class="menu_template" id="menu_home">
 				<div class="row">
 					<div class="col-md-4">
-						<img src="./image/profile.jpg" width="100%">
+						<img src="./image/profile3.jpg" width="100%" class="profile_image">
 
 					</div>
 					<div class="col-md-8">
@@ -78,15 +76,15 @@
 
 						<br>
 						<div class="ui labels" style="margin-top:15px">
-							<a class="ui label" href="mailto:kimauk@gmail.com" target="_blank"></i>kimauk@gmail.com</a>
-							|
+							<a class="ui label" href="mailto:kimauk@gmail.com" target="_blank"></i>kimauk@gmail.com</a>|
 							<a class="ui label"
 								href="https://docs.google.com/document/d/1pwR4VtFH5ifV_W_lMsAisfupnHwliurHJaziSi5mrFY/edit?usp=sharing"
 								target="_blank"></i>CV</a> |
 							<a class="ui label" href="https://scholar.google.co.kr/citations?user=sI0qT0MAAAAJ&hl=en"
-								target="_blank">Google Scholar</a> |
+								target="_blank">Google Scholar</a>|
 							<a class="ui label" href="https://hai.kangwon.ac.kr/"
-								target="_blank">Lab Homepage</a>
+								target="_blank">HAI Lab</a>
+							
 						</div>
 
 						<blockquote class="blockquote text-right">
