edit index profile image file name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="menu_template" id="menu_home">
 				<div class="row">
 					<div class="col-md-4">
-						<img src="./image/profile3.jpg" width="100%" class="profile_image">
+						<img src="./image/profile.jpg" width="100%" class="profile_image">
 
 					</div>
 					<div class="col-md-8">
